CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(libql)

INCLUDE_DIRECTORIES(${ROOT_DIR}/3rd/include)
LINK_DIRECTORIES(${ROOT_DIR}/3rd/lib)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_LIST)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
        event
        event_core
        event_extra
        )

IF (WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME}
            ws2_32
            Iphlpapi
            )
ENDIF()

SET_TARGET_PROPERTIES(${PROJECT_NAME}
        PROPERTIES
        CXX_STANDARD 14
        CXX_EXTENSIONS OFF
        CXX_STANDARD_REQUIRED ON
        )

#FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/
#        DESTINATION ${ROOT_DIR}/include
#        FILES_MATCHING PATTERN "*.h"
#        )